xdr-soar-infra/3-k8s-network-policies/00-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: xdr-soar
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
