xdr-soar-infra/3-k8s-network-policies/02-isolate-yara.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-yara-scanner
  namespace: xdr-soar
spec:
  podSelector:
    matchLabels:
      app: yara-scanner
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mongodb # 僅允許連線至 MongoDB 抓取樣本
    ports:
    - protocol: TCP
      port: 27017
  - to:
    - podSelector:
        matchLabels:
          app: kafka
    ports:
    - protocol: TCP
      port: 9092
